   require a database lookup.

3. Avoid exception when a text blob is a stored procedure parameter.

4. Update test suite to include a test for a stored proc returning a text blob.

5. IAttachment: add
      function GetRemoteProtocol: AnsiString;
      function GetODSMajorVersion: integer;
      function GetODSMinorVersion: integer;

   These results are cached when the connection is opened and hence do not
   require a database lookup.

6. IAttachment: add "function GetConnectString: AnsiString;" This returns the
   connect string used to create/connect to the database.

7. IAttachment: Create Database using SQL statement. The username and password
   are now extracted and used to populate a DPB made available via IAttachment.getDPB.
   It is now possible to use IAttachment disconnect/connect to reconnect to
   a database for which the initial connection was established by a create
   database sql statement. Available in FPC only.

8. Update Test 1 to test 5, 6 and 7 above.

9. IBUtils code tidy up.

10. Parameter Block interfaces "find" method. As documented, this should have
   returned a nil interface when the item could not be found. Instead, an empty
   interface item was returned. "Find" now works as documented and will return
   a nil interface if the item cannot be found.

11. DBInformation: support added for isc_info_active_tran_count and isc_info_creation_date.

12. DBInformation: New interfaces: IDIRB and IDIRBItem added to support DB Information
    requests with additional parameters. This is to enable support for fb_info_page_contents
    (return of page contents). Response to fb_info_page_contents returned as
    a string with code page CP_NONE.

13. DBInformation: Support for fb_info_pages_used and fb_info_pages_free added, plus
    test suite updated.

FBINTF Change Log  version                             (1.1-0) Sun, 07 Jan 2018 15:20:02 +0000

1. Fix issues with setting SQL Param values using SetAsString with Numeric types.