@@ -15,7 +15,6 @@
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <TopLine Value="567"/>
         <CursorPos X="31" Y="598"/>
@@ -25,10 +24,12 @@
       <Unit2>
         <Filename Value="Test1.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="106"/>
-        <CursorPos Y="4"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="119"/>
+        <CursorPos Y="144"/>
         <UsageCount Value="133"/>
+        <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="test2.pas"/>
@@ -201,10 +202,11 @@
       </Unit21>
       <Unit22>
         <Filename Value="../client/FBAttachment.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="420"/>
-        <CursorPos X="17" Y="441"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="656"/>
+        <CursorPos X="25" Y="658"/>
         <UsageCount Value="24"/>
+        <Loaded Value="True"/>
       </Unit22>
       <Unit23>
         <Filename Value="../client/FBClientAPI.pas"/>
@@ -244,10 +246,11 @@
       </Unit27>
       <Unit28>
         <Filename Value="../IB.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="901"/>
-        <CursorPos X="75" Y="930"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="910"/>
+        <CursorPos X="37" Y="933"/>
         <UsageCount Value="54"/>
+        <Loaded Value="True"/>
       </Unit28>
       <Unit29>
         <Filename Value="runtest.sh"/>
@@ -706,7 +709,7 @@
         <UsageCount Value="9"/>
       </Unit93>
     </Units>
-    <JumpHistory Count="3" HistoryIndex="2">
+    <JumpHistory Count="9" HistoryIndex="8">
       <Position1>
         <Filename Value="TestManager.pas"/>
         <Caret Line="34" Column="14" TopLine="13"/>
@@ -719,6 +722,30 @@
         <Filename Value="TestManager.pas"/>
         <Caret Line="40" Column="15" TopLine="20"/>
       </Position3>
+      <Position4>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="129" Column="18" TopLine="112"/>
+      </Position4>
+      <Position5>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="635" Column="3" TopLine="633"/>
+      </Position5>
+      <Position6>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="68" Column="20" TopLine="60"/>
+      </Position6>
+      <Position7>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="250" Column="14" TopLine="239"/>
+      </Position7>
+      <Position8>
+        <Filename Value="../client/FBAttachment.pas"/>
+        <Caret Line="131" Column="48" TopLine="112"/>
+      </Position8>
+      <Position9>
+        <Filename Value="Test1.pas"/>
+        <Caret Line="35" Column="61" TopLine="24"/>
+      </Position9>
     </JumpHistory>
   </ProjectSession>
   <Debugging>
